--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5433/ElDevCat
 spring.datasource.username=user
 spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto=update
+
+spring.mustache.expose-request-attributes=true
