--- a/pom.xml
+++ b/pom.xml
@@ -42,11 +42,15 @@
             <scope>test</scope>
         </dependency>
 
-        <!--  Mustache  -->
+        <!--  Mustache and FreeMarker -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-freemarker</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mustache</artifactId>
-            <version>2.6.0</version>
         </dependency>
 
         <!--  DB support  -->
