--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto=update
 
 spring.mustache.expose-request-attributes=true
+
+spring.freemarker.expose-request-attributes=true
